ash-code/tui/src/app/snapshots/app__marketplace_tests__lsp_chinese_path.snap
---
source: ash-code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 语 言 服 务 器 程 序  ───────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ /tools/程 序  {0}                                                    │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  Enter 继 续  · Esc 返 回                                                   │             
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮  
  │ > 构 建 任 何 内 容                                                                                │  
  ╰─────────────────────────────────────────────────────────────────────────────────── 自 动 模 型  ─╯
