ash-code/tui/src/app/snapshots/app__marketplace_tests__marketplace_category_sections.snap
---
source: ash-code/tui/src/app/marketplace_tests.rs
expression: screen(&app)
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
                                                                                                    
            ┌── 扩 展 市 场  ─────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   技 能     插 件     MCP    连 接 器     可 执 行 程 序     编 程 语 言     主 题        │             
            │   语 言 包     资 源                                                         │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 扩 展 市 场 ， 按  Enter 搜 索                                         │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  已 安 装                                                                  │             
            │> Web tools                                                              │             
            │  未 安 装                                                                  │             
            │> Guide                                                                  │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │  / 搜 索  · ←/→ 详 情  · u 卸 载  · r 刷 新                                     │             
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮  
  │ > 构 建 任 何 内 容                                                                                │  
  ╰─────────────────────────────────────────────────────────────────────────────────── 自 动 模 型  ─╯
